<resources>
    <string name="app_name">Transcriber</string>

    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Pause</string>
    <string name="continueRecognition">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_title_here">Add Title Here</string>
    <string name="dot">.</string>
    <string name="time">00:00</string>
    <string name="search_recording_hint">Search recordings</string>
    <string name="upgrade">Upgrade to pro for 10 import per day ( up to the allocated minutes)</string>
    <string name="continue_import">Continue to import</string>
    <string name="from">From</string>
    <string name="dummy_date">Mon, 12 Aug 2024, 16:00</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="create_account">Create new account</string>
    <string name="welcome_please">Welcome Please enter your detail</string>
    <string name="name">Name</string>
    <string name="user_name_hint">Enter your name</string>
    <string name="continue_email">Continue with email</string>
    <string name="your_email">What\'s your email?</string>
    <string name="require_information">"We require this information to either access your existing account or to set up a new one"</string>
    <string name="enter_email">Enter your email</string>
    <string name="next">Next</string>
    <string name="enter_name_below">"Enter your name below so friends can find you  "</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="enter_f_name">Enter your first name</string>
    <string name="enter_l_name">Enter your last name</string>
    <string name="already_account">Already have an account<b><font color='#365776'>?</font></b></string>
    <string name="login_here">Log in here</string>
    <string name="password">Password</string>
    <string name="password_char">Minimum 8 characters, with at least 1 uppercase, 1 lowercase, and 1 number required</string>
    <string name="choose_password">Choose a Pasward</string>
    <string name="verify_email">Verify your email address </string>
    <string name="sent_email">We,ve sent you an OTP on your email</string>
    <string name="use_app">To use our app check the OTP we have sent to you on userinfo@gmail.com</string>
    <string name="send_again">Send Again</string>
    <string name="not_recieve">Didn\'t receive the OTP yet?</string>
    <string name="open_email">Open email app</string>
    <string name="summary_keyword">Summary  Keywords</string>
    <string name="enter_address">Email Address</string>
    <string name="ask_about_meeting">Ask anything about this meeting</string>
    <string name="open" />
    <string name="close" />
    <string name="rat_app">Rate the App</string>
    <string name="feed_back">Feedback</string>
    <string name="share_app">Share the App</string>
    <string name="about_app">About the App</string>
    <string name="contact_us">Contact Us</string>
    <string name="setting">Settings</string>
    <string name="pref">Prefrences</string>
    <string name="notification">Notification</string>
    <string name="meeting">Meeting Settings</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="account">Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>


    <string name="ms_sign_in_path"> IqOtbA9XeEWmQKaBRtq69HMzvkM=</string>
    <string name="ask_any">Ask anything in **** AI Chat</string>
    <string name="summarize_call">Summarize my call for last week</string>
    <string name="ratio">How should i prepare for my 1:1\n today?</string>
    <string name="status_acm">What\'s the Status of my ACME\n deal?</string>
    <string name="sentiment">What was the sentiment in the\n last All Hands meeting?</string>
    <string name="upcoming">Upcoming</string>


</resources>