<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.authorization.Password">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn"
        app:layout_constraintVertical_bias="0.428" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/enter_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/enter_name_below"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/backBtn"
        app:layout_constraintTop_toBottomOf="@+id/backBtn"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/f_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/f_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="@+id/enter_name_txt"
        app:layout_constraintTop_toBottomOf="@+id/enter_name_txt"

        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/f_name_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_main_gradient"
        app:layout_constraintTop_toBottomOf="@+id/f_name_txt"
        tools:layout_editor_absoluteX="12dp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/first_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/enter_f_name"
            android:inputType="text"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/l_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/l_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="@+id/enter_name_txt"

        app:layout_constraintTop_toBottomOf="@+id/f_name_container" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/l_name_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/bg_main_gradient"
        app:layout_constraintTop_toBottomOf="@+id/l_name_txt"
        tools:layout_editor_absoluteX="12dp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/enter_f_name"
            android:inputType="text"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/next"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/l_name_container"
      />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/already_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/already_account"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/login_here"
        app:layout_constraintStart_toEndOf="@+id/already_txt"
        app:layout_constraintTop_toTopOf="@+id/already_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>