<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogs_bg">

    <RelativeLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_20sdp">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/chat_dialog_img1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/img">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/ask_any"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/chat_dialog_tick"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/summarize_call"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/chat_dialog_tick"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/ratio"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"

                />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/chat_dialog_tick"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/status_acm"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/chat_dialog_tick"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/sentiment"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"

                />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>